--- a/Stocks.html
+++ b/Stocks.html
@@ -55,36 +55,33 @@
         </section>
     </header>
     <main>
-        <div class="container section__record__doctor">
-            <h2 class="main-caption">Запись на приём</h2>
-            <div class="record__doctor-position">
-                <div class="record__doctor-form-position">
-                    <p class="record-doctor__description">
-                        Чтобы не тратить время на ожидание в очереди, мы рекомендуем Вам заранее записаться на прием в наш медицинский центр. Оставьте свои контактные данные, и наш администратор свяжется с Вами, чтобы согласовать дату и время приёма.
-                    </p>
-                    <form class="record__doctor-form">
-                        <span class="record-doctors__caption-form">Ваши ФИО</span>
-                        <input class="record-doctors__input-form" type="text">
-                        <span class="record-doctors__caption-form">Ваш телефон</span>
-                        <input class="record-doctors__input-form" type="tel">
-                        <span class="record-doctors__caption-form">Ваш email</span>
-                        <input class="record-doctors__input-form" type="email">
-                        <span class="record-doctors__caption-form">Комментарий</span>
-                        <textarea class="record-doctors__textarea-form"></textarea>
-                        <label for="check" class="label">
-                            <div class="check-div">
-                                <input class="checkbox" type="checkbox" name="check" id="check">
-                                <span class="checkbox-span">Я принимаю условия <a href="#">пользовательского соглашения</a> и даю согласие на обработку <a href="#">персональных данных</a></span>
-                            </div>  
-                        </label>
-                        <button type="submit" class="btn record__doctors-btn">Записаться</button>
-                    </form>
-                </div>
-                <div>
-                    <img class="record__doctors-image" src="img/banner_zaglushka.jpg" alt="">
+        <section class="section__stocks">
+            <div class="container">
+                <h2 class="main-caption">Учебный центр аэропорта Домодедово приглашает всех желающих на&nbsp;образовательные онлайн-курсы</h2>
+                <div class="stocks__position">
+                    <div class="stocks__text-position">
+                        <p class="stocks__text">
+                            Московский аэропорт Домодедово в&nbsp;рамках цифрового образовательного проекта DME Education разработал специальные онлайн-курсы, которые основаны на&nbsp;уникальных компетенциях экспертов компании. В&nbsp;настоящее время идет прием заявок на&nbsp;два онлайн-курса – «Шан&nbsp;Ги (боевое искусство)» и&nbsp;«Коммерческий профайлинг».
+                        </p>
+                        <p class="stocks__text">
+                            Стиль Шан&nbsp;Ги появился в&nbsp;аэропорту Домодедово в&nbsp;2016&nbsp;году как эксклюзивное прикладное боевое искусство службы безопасности. В&nbsp;процессе обучения сотрудники получают необходимые навыки и&nbsp;знания по&nbsp;обезоруживанию и&nbsp;нейтрализации нарушителей в&nbsp;зоне транспортной безопасности. По&nbsp;окончании обучения все участники получают сертификат от&nbsp;Межрегиональной Федерации Таинга и&nbsp;удостоверение о&nbsp;повышении квалификации. Продолжительность курса&nbsp;–&nbsp;3&nbsp;месяца.
+                        </p>
+                        <p class="stocks__text">
+                            Курс «Коммерческий профайлинг» предназначен для специалистов по&nbsp;подбору персонала и&nbsp;административных руководителей. Обучение направлено на&nbsp;совершенствование навыков проведения интервью и&nbsp;оценки кандидатов как при личной встрече, так и&nbsp;на&nbsp;основе биографических данных. Продолжительность обучения&nbsp;–&nbsp;2,5&nbsp;месяца. Все участники курса получают удостоверение о&nbsp;повышении квалификации.
+                        </p>
+                        <p class="stocks__text">
+                            «Онлайн-курсы в&nbsp;настоящее время очень актуальны и&nbsp;набирают все большую популярность. Наши новые образовательные продукты позволяют получить качественное обучение в любое удобное время без посещения учебного центра,&nbsp;–&nbsp;рассказал управляющий директор Domodedovo Training Джамал Халилов.&nbsp;–&nbsp;Оплатить курсы и&nbsp;получить к&nbsp;ним доступ можно онлайн, максимально быстро и&nbsp;безопасно».
+                        </p>
+                        <p class="stocks__text">
+                            Курсы организует учебный центр Domodedovo Training (предприятие Группы DME) – аккредитованный образовательный центр с&nbsp;правом преподавания на&nbsp;основе учебных материалов IATA и&nbsp;ICAO.
+                        </p>
+                    </div>
+                    <div class="stocks__image-position">
+                        <img class="stocks__img" src="img/akcii_1.jpg" alt="">
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
