--- a/feedback.html
+++ b/feedback.html
@@ -45,10 +45,10 @@
             <div class="container">
                 <nav class="nav">
                     <ul class="list-reset nav__menu anchor">
-                        <li class="nav__item"><a href="#" target="_blank">Анализы и&nbsp;цены</a></li>
-                        <li class="nav__item"><a href="#" target="_blank">Медицинские услуги</a></li>
-                        <li class="nav__item"><a href="#" target="_blank">Для организаций</a></li>
-                        <li class="nav__item"><a href="#" target="_blank">Контакты</a></li>
+                        <li class="nav__item"><a href="analiz.html">Анализы и&nbsp;цены</a></li>
+                        <li class="nav__item"><a href="doctors.html">Медицинские услуги</a></li>
+                        <li class="nav__item"><a href="organization.html">Для организаций</a></li>
+                        <li class="nav__item"><a href="contacts.html">Контакты</a></li>
                     </ul>
                 </nav>
             </div>
@@ -67,10 +67,10 @@
                         <span class="record-doctors__caption-form">Ваш email</span>
                         <input class="record-doctors__input-form" type="email">
                         <span class="record-doctors__caption-form">Ваш отзыв</span>
-                        <textarea class="record-doctors__textarea-form"></textarea>
+                        <textarea class="record-doctors__textarea-form feedback-doctors__textarea-form"></textarea>
                         <div class="g-recaptcha" data-sitekey="6Lev7bwaAAAAAHBQa_q0q-MMeA27-BdfgOxIjOMS"></div>
                         <div class="text-danger" id="recaptchaError"></div>
-                        <button type="submit" class="btn record__doctors-btn">Записаться</button>
+                        <button type="submit" class="btn record__doctors-btn">Отправить</button>
                     </form>
                 </div>
                 <div>
@@ -109,5 +109,7 @@
     <script src="js/cart.js"></script>
     <script src="js/script.js"></script>
     <script src='https://www.google.com/recaptcha/api.js'></script>
+    <script src="js/inputmask.min.js"></script>
+    <script src="js/mask.js"></script>
 </body>
 </html>
