--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
             <div class="container">
                 <nav class="nav">
                     <ul class="list-reset nav__menu anchor">
-                        <li class="nav__item"><a href="#" target="_blank">Анализы и&nbsp;цены</a></li>
-                        <li class="nav__item"><a href="#" target="_blank">Медицинские услуги</a></li>
-                        <li class="nav__item"><a href="#" target="_blank">Для организаций</a></li>
-                        <li class="nav__item"><a href="#" target="_blank">Контакты</a></li>
+                        <li class="nav__item"><a href="analiz.html" >Анализы и&nbsp;цены</a></li>
+                        <li class="nav__item"><a href="doctors.html" >Медицинские услуги</a></li>
+                        <li class="nav__item"><a href="organization.html">Для организаций</a></li>
+                        <li class="nav__item"><a href="contacts.html">Контакты</a></li>
                     </ul>
                 </nav>
             </div>
@@ -1818,5 +1818,7 @@
         </footer>
         <script src="js/main.js"></script>
         <script src="js/cart.js"></script>
+        <script src="js/inputmask.min.js"></script>
+        <script src="js/mask.js"></script>
 </body>
 </html>
