--- a/organization.html
+++ b/organization.html
@@ -47,7 +47,7 @@
                     <ul class="list-reset nav__menu anchor">
                         <li class="nav__item"><a href="analiz.html">Анализы и&nbsp;цены</a></li>
                         <li class="nav__item"><a href="doctors.html">Медицинские услуги</a></li>
-                        <li class="nav__item"><a href="organization.html">Для организаций</a></li>
+                        <li class="nav__item nav__item-open"><a href="organization.html">Для организаций</a></li>
                         <li class="nav__item"><a href="contacts.html">Контакты</a></li>
                     </ul>
                 </nav>
@@ -56,28 +56,18 @@
     </header>
     <main>
         <div class="container section__record__doctor">
-            <h2 class="main-caption">Запись на приём</h2>
+            <h2 class="main-caption">Для организаций</h2>
             <div class="record__doctor-position">
                 <div class="record__doctor-form-position">
                     <p class="record-doctor__description">
-                        Чтобы не тратить время на ожидание в очереди, мы рекомендуем Вам заранее записаться на прием в наш медицинский центр. Оставьте свои контактные данные, и наш администратор свяжется с Вами, чтобы согласовать дату и время приёма.
+                        Для организаций, работающих на территории аэропорта Домодедово, действуют специальные условия на медицинское обслуживание сотрудников. Отправьте запрос, чтобы узнать подробности.
                     </p>
                     <form class="record__doctor-form">
-                        <span class="record-doctors__caption-form">Ваши ФИО</span>
+                        <span class="record-doctors__caption-form">ФИО контактного лица</span>
                         <input class="record-doctors__input-form" type="text">
-                        <span class="record-doctors__caption-form">Ваш телефон</span>
+                        <span class="record-doctors__caption-form">Телефон</span>
                         <input class="record-doctors__input-form" type="tel">
-                        <span class="record-doctors__caption-form">Ваш email</span>
-                        <input class="record-doctors__input-form" type="email">
-                        <span class="record-doctors__caption-form">Комментарий</span>
-                        <textarea class="record-doctors__textarea-form"></textarea>
-                        <label for="check" class="label">
-                            <div class="check-div">
-                                <input class="checkbox" type="checkbox" name="check" id="check">
-                                <span class="checkbox-span">Я принимаю условия <a href="#">пользовательского соглашения</a> и даю согласие на обработку <a href="#">персональных данных</a></span>
-                            </div>  
-                        </label>
-                        <button type="submit" class="btn record__doctors-btn">Записаться</button>
+                        <button type="submit" class="btn record__doctors-btn">Отправить запрос</button>
                     </form>
                 </div>
                 <div>
