--- a/analiz.html
+++ b/analiz.html
@@ -58,7 +58,7 @@
     </header>
     <main class="main__analiz">
         <div class="container">
-            <h2 class="main-caption analiz__caption">Медицинские анализы в Домодедово</h2>
+            <h2 class="main-caption analiz__caption">Медицинские анализы в&nbsp;Домодедово</h2>
             <div class="analiz__block-position">
                 <div class="analiz__filter">
                     <form class="filter-form">
@@ -70,6 +70,7 @@
                         <button type="button" class="btn filter-btn filter-complex">Комплексные программы</button>
                         <button type="button" class="btn filter-btn filter-diseases">Заболевания</button>
                         <button type="button" class="btn filter-btn filter-group">Группы исследования</button>
+                        <button type="reset" class=" btn filter-reset-btn">Очистить все</button>
                     </form>
                 </div>
                 <div class="list__analiz">
