--- a/cart.html
+++ b/cart.html
@@ -65,7 +65,7 @@
             <h2 class="main-caption">Корзина</h2>
             <div class="cart-table__item item-1">
                 <div class="cart__item-position">
-                    <a class="researches-table__link cart__item-1">Общий анализ крови + СОЭ с лейкоцитарной формулой (с микроскопией мазка крови при наличии патологических сдвигов), венозная кровь</a>
+                    <a class="researches-table__link cart__item-1">Общий анализ крови + СОЭ с&nbsp;лейкоцитарной формулой (с&nbsp;микроскопией мазка крови при наличии патологических сдвигов), венозная кровь</a>
                     <div class="researches__upper-line">
                         <p class="researches__upper-code">Код:<span class="code">110006</span></p>
                         <p class="researches__upper-deadline">Срок:<span class="code">1&nbsp;к.д.</span></p>
@@ -73,11 +73,11 @@
                     </div>
                     <button id="first-item" class="btn cart__btn"></button>
                 </div>
-                <p class="cart__text">Биоматериал: <span class="cart__text-decoration">Кровь с ЭДТА</span></p>
+                <p class="cart__text">Биоматериал: <span class="cart__text-decoration">Кровь с&nbsp;ЭДТА</span></p>
             </div>
             <div class="cart-table__item item-2">
                 <div class="cart__item-position">
-                    <a class="researches-table__link cart__item-2">Общий анализ мочи (Urine test) с микроскопией осадка</a>
+                    <a class="researches-table__link cart__item-2">Общий анализ мочи (Urine test) с&nbsp;микроскопией осадка</a>
                     <div class="researches__upper-line">
                         <p class="researches__upper-code">Код:<span class="code">110101</span></p>
                         <p class="researches__upper-deadline">Срок:<span class="code">1&nbsp;к.д.</span></p>
@@ -97,7 +97,7 @@
                     </div>
                     <button id="three-item" class="btn cart__btn"></button>
                 </div>
-                <p class="cart__text">Биоматериал: <span class="cart__text-decoration">Кровь с флюоридом натрия</span></p>
+                <p class="cart__text">Биоматериал: <span class="cart__text-decoration">Кровь с&nbsp;флюоридом натрия</span></p>
             </div>
             <div class="cart-table__item item-4">
                 <div class="cart__item-position">
@@ -182,7 +182,7 @@
                     <button id="five-item" class="btn cart__btn"></button>
                 </div>
                 <a class="cart-item__link" href="#" download>состав комплекса</a>
-                <p class="cart__text">Биоматериал: <span class="cart__text-decoration">Кровь (сыворотка), Кал, Кровь с ЭДТА, Замороженная сыворотка, Кровь с флюоридом натрия</span></p>
+                <p class="cart__text">Биоматериал: <span class="cart__text-decoration">Кровь (сыворотка), Кал, Кровь с&nbsp;ЭДТА, Замороженная сыворотка, Кровь с&nbsp;флюоридом натрия</span></p>
             </div>
             <div class="cart__checkbox-line">
                 <label for="check" class="label">
@@ -1006,7 +1006,7 @@
         <div class="modal__caption-position">
             <h4 class="modal__list-analiz-caption cart-modal__caption">Оформление заказа</h4>
             <p class="cart__modal-text">
-                Оставьте свои контактные данные, и наш администратор свяжется с Вами, чтобы согласовать дату и время приёма.
+                Оставьте свои контактные данные, и&nbsp;наш администратор свяжется с&nbsp;Вами, чтобы согласовать дату и&nbsp;время приёма.
             </p>
             <form class="record__doctor-form">
                 <span class="record-doctors__caption-form">Ваши ФИО</span>
@@ -1020,7 +1020,7 @@
                 <label for="check3" class="label">
                     <div class="check-div">
                         <input class="checkbox" type="checkbox" name="check" id="check3">
-                        <span class="checkbox-span checkbox-span__modal">Я принимаю условия <a href="#">пользовательского соглашения</a> и даю согласие на обработку <a href="#">персональных данных</a></span>
+                        <span class="checkbox-span checkbox-span__modal">Я&nbsp;принимаю условия <a href="#">пользовательского соглашения</a> и&nbsp;даю согласие на&nbsp;обработку <a href="#">персональных данных</a></span>
                     </div>  
                 </label>
                 <button type="submit" class="btn modal-cart__btn">Отправить заказ</button>
