--- a/contacts.html
+++ b/contacts.html
@@ -61,7 +61,7 @@
         <div class="container">
             <h2 class="main-caption">Контакты</h2>
             <p class="contacts-text">
-                Специалисты Медико-санитарной части аэропорта Домодедово окажут квалифицированную помощь и проконсультируют пассажиров, работников и посетителей аэропорта. В случае необходимости оказания медицинской помощи в зонах вылета международных и внутренних воздушных линий просим вас позвонить по короткому номеру <span class="text-decoration">*1120</span> или по телефонам <span class="text-decoration">+7 495 504-02-49</span> и <span class="text-decoration">+7 495 933-66-66</span>, или с помощью телефона, расположенного рядом с выходом на посадку №32 в галерее вылета внутренних воздушных линий.
+                Специалисты Медико-санитарной части аэропорта Домодедово окажут квалифицированную помощь и&nbsp;проконсультируют пассажиров, работников и&nbsp;посетителей аэропорта. В&nbsp;случае необходимости оказания медицинской помощи в&nbsp;зонах вылета международных и&nbsp;внутренних воздушных линий просим вас позвонить по&nbsp;короткому номеру <span class="text-decoration">*1120</span> или по&nbsp;телефонам <span class="text-decoration">+7 495 504-02-49</span> и&nbsp;<span class="text-decoration">+7 495 933-66-66</span>, или с&nbsp;помощью телефона, расположенного рядом с&nbsp;выходом на&nbsp;посадку №32 в&nbsp;галерее вылета внутренних воздушных линий.
             </p>
             <div class="contacts__image-position">
                 <div class="contacts__image-block">
@@ -85,7 +85,7 @@
                     <h3 class="contacts__small-caption">Адрес медицинского центра:</h3>
                     <address class="info__adress">Московский аэропорт Домодедово</address>
                     <p class="info__text">
-                        ООО «ДОМОДЕДОВО ПЭССЕНДЖЕР ТЕРМИНАЛ».<br> Лицензия на осуществление медицинской деятельности № ЛО-50-01-012052 от 16.06.2020 г.
+                        ООО&nbsp;«ДОМОДЕДОВО ПЭССЕНДЖЕР ТЕРМИНАЛ».<br> Лицензия на&nbsp;осуществление медицинской деятельности № ЛО-50-01-012052 от&nbsp;16.06.2020 г.
                     </p>
                     <h3 class="contacts__small-caption">Контактные телефоны:</h3>
                     <a class="info__phone" href="tel:+74955040249">8 495 504 0249</a>
@@ -102,7 +102,7 @@
                 <div class="point__text-block">
                     <h3 class="point__caption">Пункт №1</h3>
                     <p class="point__text">
-                        Медицинский пункт находится на 1-ом этаже, в северо-восточной части общей зоны пассажирского терминала, прямо у входа номер 4.
+                        Медицинский пункт находится на&nbsp;1-ом этаже, в&nbsp;северо-восточной части общей зоны пассажирского терминала, прямо у&nbsp;входа номер&nbsp;4.
                     </p>
                 </div>
                 <div class="point__img">
@@ -113,7 +113,7 @@
                 <div class="point__text-block">
                     <h3 class="point__caption">Пункт №2</h3>
                     <p class="point__text">
-                        Медицинский пункт находится на 2-ом этаже, в юго-западной части общей зоны пассажирского терминала, в секторе Е.
+                        Медицинский пункт находится на&nbsp;2-ом этаже, в&nbsp;юго-западной части общей зоны пассажирского терминала, в&nbsp;секторе&nbsp;Е.
                     </p>
                 </div>
                 <div class="point__img">
