--- a/doctors.html
+++ b/doctors.html
@@ -66,7 +66,7 @@
                         <div>
                             <p class="doctors__name">Борзакова Светлана Николаевна</p>
                             <p class="doctors__proffesio">Педиатр, Инфекционист</p>
-                            <p class="doctors__work">Стаж: <span class="work-decorate">23 года</span></p>
+                            <p class="doctors__work">Стаж: <span class="work-decorate">23&nbsp;года</span></p>
                             <ul class="list-reset doctors__list">
                                 <li class="doctors__item">Кандидат медицинских наук</li>
                             </ul>
@@ -82,7 +82,7 @@
                         <div>
                             <p class="doctors__name">Милютина Людмила Никоновна</p>
                             <p class="doctors__proffesio">Педиатр, Инфекционист</p>
-                            <p class="doctors__work">Стаж: <span class="work-decorate">57 лет</span></p>
+                            <p class="doctors__work">Стаж: <span class="work-decorate">57&nbsp;лет</span></p>
                             <ul class="list-reset doctors__list">
                                 <li class="doctors__item">Доктор медицинских наук</li>
                                 <li class="doctors__item">Врач высшей категории</li>
@@ -99,7 +99,7 @@
                         <div>
                             <p class="doctors__name">Рейзис Ара Романовна</p>
                             <p class="doctors__proffesio">Гепатолог, Инфекционист, Педиатр</p>
-                            <p class="doctors__work">Стаж: <span class="work-decorate">60 лет</span></p>
+                            <p class="doctors__work">Стаж: <span class="work-decorate">60&nbsp;лет</span></p>
                             <ul class="list-reset doctors__list">
                                 <li class="doctors__item">Профессор</li>
                                 <li class="doctors__item">Врач высшей категории</li>
@@ -116,7 +116,7 @@
                         <div>
                             <p class="doctors__name">Коваль Людмила Валерьевна</p>
                             <p class="doctors__proffesio">Педиатр</p>
-                            <p class="doctors__work">Стаж: <span class="work-decorate">11 лет</span></p>
+                            <p class="doctors__work">Стаж: <span class="work-decorate">11&nbsp;лет</span></p>
                             <p class="description__price-doctors">Стоимость приёма:</p>
                             <p class="price-doctors">1 500 р.</p>
                             <button class="btn doctors-btn">Записаться на приём</button>
