--- a/get-results.html
+++ b/get-results.html
@@ -75,7 +75,7 @@
                         <label for="check" class="label">
                             <div class="check-div">
                                 <input class="checkbox" type="checkbox" name="check" id="check">
-                                <span class="checkbox-span">Я принимаю условия <a href="#">пользовательского соглашения</a> и даю согласие на обработку <a href="#">персональных данных</a></span>
+                                <span class="checkbox-span">Я&nbsp;принимаю условия <a href="#">пользовательского соглашения</a> и&nbsp;даю согласие на&nbsp;обработку <a href="#">персональных данных</a></span>
                             </div>  
                         </label>
                         <button type="submit" class="btn record__doctors-btn">Показать результат</button>
