--- a/organization.html
+++ b/organization.html
@@ -60,7 +60,7 @@
             <div class="record__doctor-position">
                 <div class="record__doctor-form-position">
                     <p class="record-doctor__description">
-                        Для организаций, работающих на территории аэропорта Домодедово, действуют специальные условия на медицинское обслуживание сотрудников. Отправьте запрос, чтобы узнать подробности.
+                        Для организаций, работающих на&nbsp;территории аэропорта Домодедово, действуют специальные условия на&nbsp;медицинское обслуживание сотрудников. Отправьте запрос, чтобы узнать подробности.
                     </p>
                     <form class="record__doctor-form">
                         <span class="record-doctors__caption-form">ФИО контактного лица</span>
