--- a/record-doctors.html
+++ b/record-doctors.html
@@ -60,7 +60,7 @@
             <div class="record__doctor-position">
                 <div class="record__doctor-form-position">
                     <p class="record-doctor__description">
-                        Чтобы не тратить время на ожидание в очереди, мы рекомендуем Вам заранее записаться на прием в наш медицинский центр. Оставьте свои контактные данные, и наш администратор свяжется с Вами, чтобы согласовать дату и время приёма.
+                        Чтобы не&nbsp;тратить время на&nbsp;ожидание в&nbsp;очереди, мы&nbsp;рекомендуем Вам заранее записаться на&nbsp;прием в&nbsp;наш медицинский центр. Оставьте свои контактные данные, и&nbsp;наш администратор свяжется с&nbsp;Вами, чтобы согласовать дату и&nbsp;время приёма.
                     </p>
                     <form class="record__doctor-form">
                         <span class="record-doctors__caption-form">Ваши ФИО</span>
@@ -74,7 +74,7 @@
                         <label for="check" class="label">
                             <div class="check-div">
                                 <input class="checkbox" type="checkbox" name="check" id="check">
-                                <span class="checkbox-span">Я принимаю условия <a href="#">пользовательского соглашения</a> и даю согласие на обработку <a href="#">персональных данных</a></span>
+                                <span class="checkbox-span">Я&nbsp;принимаю условия <a href="#">пользовательского соглашения</a> и&nbsp;даю согласие на&nbsp;обработку <a href="#">персональных данных</a></span>
                             </div>  
                         </label>
                         <button type="submit" class="btn record__doctors-btn">Записаться</button>
