--- a/get-results.html
+++ b/get-results.html
@@ -78,7 +78,7 @@
                                 <span class="checkbox-span">Я&nbsp;принимаю условия <a href="#">пользовательского соглашения</a> и&nbsp;даю согласие на&nbsp;обработку <a href="#">персональных данных</a></span>
                             </div>  
                         </label>
-                        <button type="submit" class="btn record__doctors-btn">Показать результат</button>
+                        <button type="button" class="btn record__doctors-btn">Показать результат</button>
                     </form>
                 </div>
                 <div>
