--- a/analiz.html
+++ b/analiz.html
@@ -131,7 +131,7 @@
                                 <p class="researches__upper-deadline">Срок:<span class="code">2&nbsp;к.д.</span></p>
                                 <p class="researches__upper-price">357&nbsp;р.</p>
                             </div>
-                            <button class="btn s"></button>
+                            <button class="btn researches__btn"></button>
                         </div>
                         <div class="researches-table__item">
                             <a class="researches-table__link" id="analiz-open-7">3-х&nbsp;стаканная проба</a>
